--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="SergePhoto-modified.png" alt="Serge Profile Picture"></td>
+      <td><img src="Images/SergePhoto-modified.png" alt="Serge Profile Picture"></td>
       <td><h1>Serge Moraru</h1>
       <p><em>Production Manager at <strong><a href="https://www.masterkraftinc.com">Master Kraft INC</a></strong></em></p>
       <p><strong><a href="https://www.linkedin.com/in/sergey-moraru-1b48b5193/">My LinkedIn Page</a></strong> </p>
