--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td><h1>Serge Moraru</h1>
       <p><em>Production Manager at <strong><a href="https://www.masterkraftinc.com">Master Kraft INC</a></strong></em></p>
       <p><strong><a href="https://www.linkedin.com/in/sergey-moraru-1b48b5193/">My LinkedIn Page</a></strong> </p>
-      <p>I 🤎 coffee and love working with wood</p></td>
+      <p>I 🤎 coffee and code</p></td>
     </tr>
   </table>
 
